--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -1,8 +1,6 @@
 <template name="footer">
-	<div id="footer">
-    <ul>
-      <li><a id="creditsbutton" class="link">Credits</a></li>
-      <li><a id="codebutton" class="link" href="https://github.com/berkmancenter/question_tool" target="_blank">Code</a></li>
-    </ul>
-	</div>
+    <div class="row">
+        <a id="creditsbutton" class="link">Credits</a> |
+        <a id="codebutton" class="link" href="https://github.com/berkmancenter/question_tool" target="_blank">Code</a>
+    </div>
 </template>
