--- a/client/views/list/list.html
+++ b/client/views/list/list.html
@@ -1,4 +1,60 @@
 <template name="list">
+    <div class="row">
+
+        {{> nav list=true title=tablename admin=admin slug=slug }}
+        <div class="row" title="Description"
+             style="background: #9e9e9e30; padding: 10px;color: #ff6e6e;font-size: 25px;text-decoration: initial;">
+            {{{description}}}
+        </div>
+
+        <div class="row">
+            <div class="input-field col s6">
+                <i class="material-icons prefix">search</i>
+                <input id="icon_prefix" type="text" class="validate">
+                <label for="icon_prefix">Search Question</label>
+            </div>
+        </div>
+
+        <div id="presentationNav">
+            <div class="pres"><span id="presName">{{tablename}}</span></div>
+            <div class="pres"><span id="presDesc">{{{description}}}</span></div>
+            <div class="pres"><span id="navUnPresent"><i class="fa fa-times"></i> Exit</span></div>
+        </div>
+
+        {{#if admin}}
+            <div class="admincontainer">
+                <h2>Admin Interface</h2>
+                <p>Click and drag two questions together to combine.</p>
+                <ul id="admin-button-list" data-table-id="{{_id}}">
+                    <li id="unhidebutton">Unhide all</li>
+                    <li id="deletebutton">Delete instance</li>
+                    <li id="modbutton">Add moderators</li>
+                    <li id="renamebutton">Edit instance</li>
+                </ul>
+            </div>
+        {{/if}}
+        {{#if moderator}}
+            <div class="admincontainer modcontainer">
+                <h2>Moderator Interface</h2>
+                <p>Click and drag two questions together to combine.</p>
+            </div>
+        {{/if}}
+        {{#if hasChanges}}
+            <div class="new-posts"><i class="fa fa-refresh"></i> Refresh {{#if hasSeconds}} ({{ seconds }}) {{/if}}
+            </div>{{/if}}
+        <div class="row">
+            {{#each question}}
+                {{#if visible}}
+                    {{> question_div}}
+                {{/if}}
+            {{/each}}
+        </div>
+        {{> footer}}
+    </div>
+</template>
+
+<!--
+<template name="list">
 	<div class="wrapper" id="main-wrapper">
 
 		{{> nav list=true title=tablename admin=admin slug=slug }}
@@ -20,22 +76,24 @@
 				</ul>
 			</div>
 		{{/if}}
-		{{#if moderator}}
+    {{#if moderator}}
 			<div class="admincontainer modcontainer">
 				<h2>Moderator Interface</h2>
 				<p>Click and drag two questions together to combine.</p>
 			</div>
 		{{/if}}
-		{{#if hasChanges}}<div class="new-posts"><i class="fa fa-refresh"></i> Refresh {{#if hasSeconds}} ({{ seconds }}) {{/if}}</div>{{/if}}
+    {{#if hasChanges}}<div class="new-posts"><i class="fa fa-refresh"></i> Refresh {{#if
+            hasSeconds}} ({{ seconds }}) {{/if}}</div>{{/if}}
     <div class="masonary-wrapper" id="list-wrapper">
   		<div class="container" id="quest-container">
   			{{#each question}}
-  				{{#if visible}}
-  					{{> question_div}}
-  				{{/if}}
-  			{{/each}}
+    {{#if visible}}
+        {{> question_div}}
+    {{/if}}
+{{/each}}
   		</div>
 	</div>
 		{{> footer}}
 	</div>
 </template>
+-->
