Enabling the side bar navigation

--- a/client/views/helpers/chunks/question_div/question_div.html
+++ b/client/views/helpers/chunks/question_div/question_div.html
@@ -46,7 +46,7 @@
             </div>
             <div class="card-action">
                 <a><strong>({{replyCount}})</strong> Replies</a>
-                <a><strong>({{voteCount}} / {{answersCount}})</strong> Votes</a>
+                <a><strong>({{voteCount}})</strong> Votes</a>
             </div>
         </div>
     </div>
