--- a/client/views/list/list.html
+++ b/client/views/list/list.html
@@ -1,4 +1,13 @@
 <template name="list">
+
+    <script
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+
     <div class="row">
 
         {{> nav list=true title=tablename admin=admin slug=slug }}
