--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -1,5 +1,14 @@
 <template name="home">
-  <div class="wrapper" id="main-wrapper">
+
+    <script
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+
+    <div class="wrapper" id="main-wrapper">
     {{> nav title="Q&A Tool" list=false}}
     <div class="masonary-wrapper" id="mwrapper">
       <div id="recent">
